--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lê Đình An - Thông tin cá nhân</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div id="header_cv">
         <div class="navbar_ins">
-            <a href="https://www.niemvuilaptrinh.com/"><img src="/images/andinhle.png" alt="ảnh cá nhân" width="125px" height="125px"></a>
+            <a href="#"><img src="images/andinhle.png" alt="ảnh cá nhân" width="125px" height="125px"></a>
         </div>
         <div class="join_name">
             <h3>THÔNG TIN CÁ NHÂN</h3><hr color="white" size="3px">
@@ -31,8 +31,8 @@
                         <br>
                         TÊN: LE DINH AN <br>
                         <br>
-                        <img src="/images/qrviettibank.png" alt="qr ngân hàng vietinbank" width="120px" height="120px"><br>
-                        <img src="/images/vietinbank.png" alt="ngân hàng vietinbank" width="150px" height="50px">
+                        <img src="images/qrviettibank.png" alt="qr ngân hàng vietinbank" width="120px" height="120px"><br>
+                        <img src="images/vietinbank.png" alt="ngân hàng vietinbank" width="150px" height="50px">
                     </h4>
                 </div>
                 <div class="bank2">
@@ -40,8 +40,8 @@
                         <br>
                         TÊN: LE DINH AN <br>
                         <br>
-                        <img src="/images/qrmbbank.png" alt="qr ngân hàng MBbank" width="120px" height="120px"><br>
-                        <img src="/images/Logo_MB_new.png" alt="ngân hàng MBbank" width="150px" height="50px">
+                        <img src="images/qrmbbank.png" alt="qr ngân hàng MBbank" width="120px" height="120px"><br>
+                        <img src="images/Logo_MB_new.png" alt="ngân hàng MBbank" width="150px" height="50px">
                     </h4>
                 </div>
                 
