--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lê Đình An - Thông tin cá nhân</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <link rel="icon" href="/dinhanle/images/anh.png" type="/dinhanle/images/x-icon">
     <link rel="stylesheet" href="/dinhanle/style/style.css">
 </head>
 <body>
