--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <a href="https://www.tiktok.com/@163ledinhan"><i class="fa-brands fa-tiktok" style="color:black"></i></a>
             <a href="https://www.youtube.com/channel/UCaBOCEqPWvKNlw2RuVXnaOQ"><i class="fa-brands fa-youtube" style="color:red"></i></a>
             <hr color="white" size="3px">
-            <div class="bank">            
+            <ul class="bank">            
                 <h3>THÔNG TIN BANK</h3>
-                <div class="bank1">
+                <li class="bank1">
                     <h4>STK: 104875691730 <br>
                         <br>
                         TÊN: LE DINH AN <br>
@@ -35,17 +35,16 @@
                         <img src="/dinhanle/images/qrviettibank.png" alt="qr ngân hàng vietinbank" width="120px" height="120px"><br>
                         <img src="/dinhanle/images/vietinbank.png" alt="ngân hàng vietinbank" width="150px" height="50px">
                     </h4>
-                </div>
-                <div class="bank2">
+                </li>
+                <li class="bank2">
                     <h4>STK: 8096161632004 <br>
                         <br>
                         TÊN: LE DINH AN <br>
                         <br>
                         <img src="/dinhanle/images/qrmbbank.png" alt="qr ngân hàng MBbank" width="120px" height="120px"><br>
                         <img src="/dinhanle/images/Logo_MB_new.png" alt="ngân hàng MBbank" width="150px" height="50px">
-                    </h4>
-                </div>
-                
+                    </li>
+                <ul
             </div>
             <div class="end">
                 <p><b>Thank You Very Much</b><i class="fa-solid fa-heart" style="color:red"></i></p>
