--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <h3>THÔNG TIN BANK</h3>
             <ul class="bank">           
                 <li class="bank1">
-                    <h4>STK: 104875691730 <br>
+                    <h4>
+                        STK: 104875691730 <br>
                         <br>
                         TÊN: LE DINH AN <br>
                         <br>
@@ -37,7 +38,8 @@
                     </h4>
                 </li>
                 <li class="bank2">
-                    <h4>STK: 8096161632004 <br>
+                    <h4>
+                        STK: 8096161632004 <br>
                         <br>
                         TÊN: LE DINH AN <br>
                         <br>
