--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <hr color="white" size="3px">
             <h3>THÔNG TIN BANK</h3>
             <ul class="bank">           
-                <li>
+                <li class="bank1">
                     <h4>
                         STK: 104875691730 <br>
                         <br>
@@ -37,7 +37,7 @@
                         <img src="/dinhanle/images/vietinbank.png" alt="ngân hàng vietinbank" width="150px" height="50px">
                     </h4>
                 </li>
-                <li>
+                <li class="bank2">
                     <h4>
                         STK: 8096161632004 <br>
                         <br>
