--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header_cv">
         <div class="navbar_ins">
-            <a href="#"><img src="/dinhanle/images/andinhle.png" alt="ảnh cá nhân" width="125px" height="125px"></a>
+            <a href="#"><img src="/dinhanle/images/photo_2023-07-13 15.46.17.jpeg" alt="ảnh cá nhân" width="125px" height="125px"></a>
         </div>
         <div class="join_name">
             <h3>THÔNG TIN CÁ NHÂN</h3><hr color="white" size="3px">
